--- a/Frontend/aad_frontend/src/index.css
+++ b/Frontend/aad_frontend/src/index.css
@@ -3,3 +3,9 @@
  
 }
 
+body{
+  background-image: url('https://www.smefinanceforum.org/sites/default/files/shutterstock_1635308305-NL.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
