--- a/Frontend/aad_frontend/src/index.css
+++ b/Frontend/aad_frontend/src/index.css
@@ -2,10 +2,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  
 }
-
-body{
-  background-image: url('https://www.smefinanceforum.org/sites/default/files/shutterstock_1635308305-NL.jpg');
+.landing-page,#login-body {
+  background-image: url('https://alternativecreditinvestor.com/wp-content/uploads/2020/12/AdobeStock_319204939-scaled.jpeg');
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
+  background-position: center;
+  backdrop-filter: blur(3px); /* Adjust the blur amount as needed */
 }
 
