--- a/Frontend/aad_frontend/src/Styles/Login.css
+++ b/Frontend/aad_frontend/src/Styles/Login.css
@@ -9,7 +9,7 @@
 #login-body {
  background-repeat: no-repeat;
  background-size: cover;
- 
+ margin-top: 10px;
   width: 100%;
   height: 90vh;
   display: flex;
