--- a/Frontend/aad_frontend/src/Styles/Document.css
+++ b/Frontend/aad_frontend/src/Styles/Document.css
@@ -1,10 +1,13 @@
 .documents-page {
     display: flex;
+    margin-top: 70px;
+
 }
 .documents-content  h2{
     font-size: medium;
 }
-.documents-content {
+.documents-content {  
+      margin-left: 170px;
 
     display: flex;
     flex: 1;
@@ -14,6 +17,7 @@
     margin-top: 70px;
 }
 .documents-content h1 {
+    font-size: x-large;
     text-align: center;
     margin-bottom: 20px;
 }
