--- a/Frontend/aad_frontend/src/Styles/Home.css
+++ b/Frontend/aad_frontend/src/Styles/Home.css
@@ -1,4 +1,3 @@
-/* App.css */
 
 body {
     font-family: Arial, sans-serif;
@@ -96,7 +95,7 @@ body {
     width: 360px;
     margin-bottom: 40px;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white */
+    background-color: rgba(255, 255, 255, 0.5);
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -133,7 +132,7 @@ body {
   justify-content: space-between;
   padding: 20px;
   padding: 20px;
-  background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white */
+  background-color: rgba(255, 255, 255, 0.5); 
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -151,7 +150,7 @@ body {
 }
 .header-content {
     margin: 10px;
-  max-width: 50%; /* Adjust the width of text content */
+  max-width: 50%;
 }
 
 .header-content h3 {
@@ -166,8 +165,8 @@ body {
 }
 
 .header-image img {
-  max-width: 80%; /* Ensure image stays within container */
-  height: 400px; /* Maintain aspect ratio */
+  max-width: 80%; 
+  height: 400px; 
   border-radius: 50%;
 }
  .footer * {
@@ -190,7 +189,7 @@ body {
   margin-left: 0px;
   color: black;
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white */
+  background-color: rgba(255, 255, 255, 0.8); 
   border-top: 1px solid #e5e5e5;
 }
 
